# Pandora_libSGM

./: .codecov.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: libsgm_ci.yml  test-then-create-and-publish-wheel.yml
.gitlab/: README.md
doc/: Doxyfile  Makefile  make.bat
doc/source/: Doxyfile  api_reference.rst  conf.py  developer_guide.rst  index.rst
doc/source/api_reference/: modules.rst
doc/source/api_reference/libsgm_python/lr_manager/: index.rst
doc/source/api_reference/libsgm_python/sgm_python/: index.rst
doc/source/api_reference/libsgm_python/sgm_python_parall/: index.rst
doc/source/developer_guide/: before_coding.rst  lr_manager.rst  piecewise_optimization.rst
doc/source/getting_started/: installation.rst  quick_overview.rst
docs/: Doxyfile  Makefile  make.bat  requirements.txt
docs/source/: c_libsgm.rst  conf.py  getting_started.rst  index.rst  sgm_wrapper.rst
docs/source/api_reference/libsgm_python/: index.rst
docs/source/developer_guide/: before_coding.rst  memory_optimization.rst
docs/source/getting_started/: example.rst  installation.rst  quick_overview.rst
libsgm_python/: lr_manager.py  sgm_python.py  sgm_python_parall.py
sources/: sgm_wrapper.cpp  sgm_wrapper.pyx
sources/lib/: sgm.cpp  sgm.hpp
src/libSGM/: sgm_wrapper.cpp  sgm_wrapper.pyx
src/libSGM/lib/: sgm.cpp  sgm.hpp
src/libsgm_c/: sgm.cpp  sgm.hpp  sgm_wrapper.cpp
src/libsgm_python/: lr_manager.py  sgm_python.py  sgm_python_parall.py
test/: functions_unittest.cpp
test/test_libsgm_python/: common.py  disable_test_sgm_python_parall.py  test_lr_manager.py  test_sgm_python.py
tests/: functions_unittest.cpp
tests/test_libsgm_python/: common.py  disable_test_sgm_python_parall.py  test_lr_manager.py  test_sgm_python.py
