#!/usr/bin/env python
# coding: utf8
#
# Copyright (c) 2024 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of LIBSGM
#
#     https://github.com/CNES/Pandora_libsgm
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# pyproject.toml
[build-system]
requires = [
    "setuptools>=69.1",
    "wheel",
    "setuptools_scm[toml]>=8",
    "numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
# https://github.com/psf/black
line-length = 120
exclude = "(.eggs|.git|.mypy_cache|.nox|.tox|_build|build|dist|venv)"

[tool.isort]
profile = 'black'
line_length = 120

[tool.mypy]
no_implicit_optional = false
strict_optional = false
allow_redefinition = true
allow_untyped_globals = true
local_partial_types = false
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = 'attr-defined'

[[tool.mypy.overrides]]
module = [
    'setuptools',
]
ignore_missing_imports = true