#!/usr/bin/env python
# coding: utf8
#
# Copyright (c) 2020 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of LIBSGM
#
#     https://github.com/CNES/Pandora_libsgm
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Pandora_libsgm setup configuration file

# package setup main metadata
[metadata]
name = libSGM
description = libSGM is a CNES version of H.Hirschmuller Semi-Global Matching
long_description_content_type = text/markdown
author = CNES
author_email = myriam.cournet@cnes.fr
url = https://github.com/CNES/Pandora_libsgm
license = Apache License 2.0
license_file = LICENSE

[options]
python_requires = >=3.6

setup_requires =
    setuptools_scm # Following https://pypi.org/project/setuptools-scm/

# Pandora_libsgm packages dependencies
install_requires =
    numpy==1.22.*;python_version>'3.7'
    numpy;python_version<'3.8'
    nose2
    numba==0.53.*;python_version>'3.7'
    numba>=0.47.*;python_version<'3.8'


package_dir =
    . = libsgm
packages = find:

# Pandora_libsgm entry points cli scripts
[options.entry_points]
libsgm =
    python_libsgm = libsgm_python.sgm_python:run_sgm

[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi
    pytest
    pytest-cov
    pylint
    pre-commit
    mypy
    black
