# Copyright (c) 2024 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of LIBSGM
#
#     https://github.com/CNES/Pandora_libsgm
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Pandora_libsgm setup configuration file

# package setup main metadata
[metadata]
name = libSGM
author = CNES
author_email = pandora@cnes.fr
url = https://github.com/CNES/Pandora_libsgm
description = libSGM is a CNES version of H.Hirschmuller Semi-Global Matching
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
platform = any
keywords= matching,pandora, photogrammetry, correlation, DIC
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
python_requires = >=3.8

setup_requires =
   setuptools>=69.1
   setuptools_scm[toml]>=8 # Following https://pypi.org/project/setuptools-scm/
   wheel

# Pandora_libsgm packages dependencies
install_requires =
    numpy<2.0
    numba>=0.55.2

package_dir =
    =src
packages = find:
[options.packages.find]
where = src

# Pandora_libsgm entry points cli scripts
[options.entry_points]
libsgm =
    pylibsgm = libsgm_python.sgm_python:run_sgm

[options.extras_require]
dev =
    pre-commit
    isort>=5.8.0                  # Check imports
    black>=21.5b0                 # PEP8 format code
    pylint                        # General linter
    setuptools_scm                # versions from git tag
    twine                         # For pypi upload
    build                         # Build package python
    pytest                        # Testing framework
    pytest-cov                    # Coverture for pytest
    pytest-sugar                  # Pretty output for pytest
    mypy                          # Type hint checker
    gcovr                         # C++ coverage
    pybind11>=2.10.0

docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi
    breathe
    exhale
